# AFLplusplus_ultimate_protobuf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lpm_afl_mutator.h
cmake/: 0001-protobuf-generate-libprotobuf.patch  README.md  libprotobuf-mutator.cmake  libprotobuf.cmake
example/: CMakeLists.txt  corpus_proto_creator.cpp  example.proto  run.sh
example/fuzzer/: CMakeLists.txt  harness.cpp
example/harness/: CMakeLists.txt  harness.cpp
example/mutator/: CMakeLists.txt  mutator.cpp
